# python_ai_developer

./: .gitignore  README.md  example.json  extract_code.sh  generated_code.py  nginx_log_processor.py  programming_problem.txt  pyproject.toml  requests.txt  research_results.md  save_results.sh  test_results.md
knowledge/: user_preference.txt
proxy_openai/: Dockerfile  default.conf  nginx.conf
src/python_ai_developer/: crew.py  main.py
src/python_ai_developer/config/: agents.yaml  tasks.yaml
